fix some build stuff

--- a/branches/matxin-engine/Makefile.am
+++ b/branches/matxin-engine/Makefile.am
@@ -2,7 +2,7 @@ SUBDIRS = src
 #DIST_SUBDIRS = matxin
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = matxin.pc
+pkgconfig_DATA = matxin-engine.pc
 
 EXTRA_DIST=AUTHORS ChangeLog COPYING INSTALL NEWS README 
 
