--- a/branches/matxin-engine/src/Makefile.am
+++ b/branches/matxin-engine/src/Makefile.am
@@ -1,19 +1,20 @@
 EXTRA_DIST = config.h data_manager.h matxin_string_utils.h simpleregex.h string_utils.h utf_converter.h XML_reader.h gen_fst2regex.sh gen_Matxin_translator.sh deformat.xsl txt-format.xml rtf-format.xml html-format.xml
 
-bin_PROGRAMS = matxin-lexfer ST_intra ST_inter ST_prep ST_verb SG_inter SG_intra \
-               MG reFormat  
+bin_PROGRAMS = matxin-xfer-lex matxin-xfer-intra matxin-xfer-inter matxin-gen-inter matxin-gen-intra \
+	       matxin-gen-morph ST_prep ST_verb \
+               reFormat  
 #txt-deformat html-deformat rtf-deformat
 
 bin_SCRIPTS = Matxin_translator fst2regex.pl
 
-matxin_lexfer_SOURCES = matxin_lexfer.cc utf_converter.cc data_manager.cc XML_reader.cc simpleregex.cc matxin_string_utils.cc matxin_string_utils.h
-matxin_lexfer_LDADD =  -lboost_filesystem
+matxin_xfer_lex_SOURCES = matxin_xfer_lex.cc utf_converter.cc data_manager.cc XML_reader.cc simpleregex.cc matxin_string_utils.cc matxin_string_utils.h string_utils.cc string_utils.h
+matxin_xfer_lex_LDADD =  -lboost_filesystem
 
-ST_intra_SOURCES = ST_intra.cc utf_converter.cc data_manager.cc XML_reader.cc simpleregex.cc matxin_string_utils.cc matxin_string_utils.h
-ST_intra_LDADD =      -lboost_filesystem
+matxin_xfer_intra_SOURCES = matxin_xfer_intra.cc utf_converter.cc data_manager.cc XML_reader.cc simpleregex.cc matxin_string_utils.cc matxin_string_utils.h
+matxin_xfer_intra_LDADD =      -lboost_filesystem
 
-ST_inter_SOURCES = ST_inter.cc utf_converter.cc data_manager.cc XML_reader.cc simpleregex.cc matxin_string_utils.cc matxin_string_utils.h
-ST_inter_LDADD =      -lboost_filesystem
+matxin_xfer_inter_SOURCES = matxin_xfer_inter.cc utf_converter.cc data_manager.cc XML_reader.cc simpleregex.cc matxin_string_utils.cc matxin_string_utils.h
+matxin_xfer_inter_LDADD =      -lboost_filesystem
 
 ST_prep_SOURCES = ST_prep.cc utf_converter.cc data_manager.cc XML_reader.cc simpleregex.cc matxin_string_utils.cc matxin_string_utils.h
 ST_prep_LDADD =      -lboost_filesystem
@@ -21,14 +22,14 @@ ST_prep_LDADD =      -lboost_filesystem
 ST_verb_SOURCES = ST_verb.cc utf_converter.cc data_manager.cc XML_reader.cc simpleregex.cc matxin_string_utils.cc matxin_string_utils.h
 ST_verb_LDADD =      -lboost_filesystem
 
-SG_inter_SOURCES = SG_inter.cc utf_converter.cc data_manager.cc XML_reader.cc simpleregex.cc matxin_string_utils.cc matxin_string_utils.h
-SG_inter_LDADD =      -lboost_filesystem
+matxin_gen_inter_SOURCES = matxin_gen_inter.cc utf_converter.cc data_manager.cc XML_reader.cc simpleregex.cc matxin_string_utils.cc matxin_string_utils.h
+matxin_gen_inter_LDADD =      -lboost_filesystem
 
-SG_intra_SOURCES = SG_intra.cc utf_converter.cc data_manager.cc XML_reader.cc simpleregex.cc matxin_string_utils.cc matxin_string_utils.h
-SG_intra_LDADD =      -lboost_filesystem
+matxin_gen_intra_SOURCES = matxin_gen_intra.cc utf_converter.cc data_manager.cc XML_reader.cc simpleregex.cc matxin_string_utils.cc matxin_string_utils.h
+matxin_gen_intra_LDADD =      -lboost_filesystem
 
-MG_SOURCES = MG.cc data_manager.cc utf_converter.cc XML_reader.cc simpleregex.cc matxin_string_utils.cc matxin_string_utils.h
-MG_LDADD =      -lboost_filesystem
+matxin_gen_morph_SOURCES = matxin_gen_morph.cc data_manager.cc utf_converter.cc XML_reader.cc simpleregex.cc matxin_string_utils.cc matxin_string_utils.h
+matxin_gen_morph_LDADD =      -lboost_filesystem
 
 reFormat_SOURCES = reFormat.cc utf_converter.cc data_manager.cc XML_reader.cc simpleregex.cc matxin_string_utils.cc matxin_string_utils.h
 
